# rustrac

./: .gitignore  package-lock.json  package.json  vite.config.ts
server/: Cargo.toml
server/src/: config.rs  errors.rs  main.rs
src/: App.svelte
src/api/: agent.ts
src/lib/: Login.svelte  Private.svelte
src/models/: metaData.ts  paginatedResponse.ts
src/store/: auth.ts
